ajustes css na versão mobile

--- a/index.html
+++ b/index.html
@@ -9,26 +9,25 @@
   <body>
     <main>
       <div id="avatar">
-        <img src="https://lorempixel.com/185/183/people/" alt="avatar" />
+        <img id="userimage" src="" alt="avatar" />
       </div>
       <div id="informations">
-        <h1>Francisco Anderson</h1>
-        <a href="#">
+        <h1 id="name"></h1>
+        <a id="usernamelink" href="#">
           <img src="imagens/github.svg" alt="github" />
-          <p>AndersonCaj26</p>
+          <p id="username"></p>
         </a>
       </div>
-      <div id="about">
-        Um entusiasta da programação. Formado em Tecnologia em Análise e
-        Desenvolvimento de Sistemas pelo Instituto Federal do Piauí - Campus
-        Floriano.
-      </div>
+      <div id="about"></div>
       <div id="links">
-        <a href="#"><img src="imagens/youtube.svg" alt="" /></a>
-        <a href="#"><img src="imagens/instagram.svg" alt="" /></a>
-        <a href="#"><img src="imagens/facebook.svg" alt="" /></a>
-        <a href="#"><img src="imagens/twitter.svg" alt="" /></a>
-      </div>
+        <a href="https://www.youtube.com/channel/UCFDwNJj14uPdcPnrzIy9zpg" target="_blank"
+          ><img src="imagens/youtube.svg" alt="youtube"
+        /></a>
+        <a href="https://www.instagram.com/far_sousa/" target="_blank"
+          ><img src="imagens/instagram.svg" alt="instagram"
+        /></a>
     </main>
+
+    <script src="script.js"></script>
   </body>
 </html>
