--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </div>
       <div id="informations">
         <h1 id="name"></h1>
-        <a id="usernamelink" href="#">
+        <a id="usernamelink" href="#" target="_blank">
           <img src="imagens/github.svg" alt="github" />
           <p id="username"></p>
         </a>
