ajustes de links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </div>
       <div id="informations">
         <h1 id="name"></h1>
-        <a id="usernamelink" href="#" target="_blank">
+        <a id="usernamelink" target="_blank" href="#">
           <img src="imagens/github.svg" alt="github" />
           <p id="username"></p>
         </a>
@@ -23,8 +23,14 @@
         <a href="https://www.youtube.com/channel/UCFDwNJj14uPdcPnrzIy9zpg" target="_blank"
           ><img src="imagens/youtube.svg" alt="youtube"
         /></a>
-        <a href="https://www.instagram.com/far_sousa/" target="_blank"
+        <a href="#" target="_blank"
           ><img src="imagens/instagram.svg" alt="instagram"
+        /></a>
+        <a href="#" target="_blank"
+          ><img src="imagens/facebook.svg" alt="facebook"
+        /></a>
+        <a href="#" target="_blank"
+          ><img src="imagens/twitter.svg" alt="twitter"
         /></a>
     </main>
 
