settings the final styles

--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Portfólio</title>
+    <title>Crachá Virtual</title>
   </head>
   <body>
+    <div id="degrade1"></div>
+    <div id="degrade2"></div>
+    <div id="faixa"></div>
+    <div id="quebra"></div>
     <main>
       <div id="avatar">
         <img id="userimage" src="" alt="avatar" />
